--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,11 @@ div.grid-item.wall {
   background-color: #a700c7;
   color: #a700c7;
 }
+div.grid-item.pinky {
+  background-image: url('../assets/pinky-sprite.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 div.grid-item.binky {
   background-image: url('../assets/pinky-sprite.png');
   background-repeat: no-repeat;
