--- a/styles/style.css
+++ b/styles/style.css
@@ -5,91 +5,163 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
+  background-image: url('../assets/bg2.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.5em;
   background-color: black;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+header{
+
+  width:540px;
+  height: 155px;
+  padding-bottom: 10px;
+}
+header p{
+  position: relative;
+  left:10px;
+  top:10px;
+  color: #fff;
+  font-size: 1.5em;
+  margin: 0;
+  font-style: italic;
+  font-family: 'Kanit', sans-serif;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px blue, 0 0 30px purple, 0 0 40px red, 0 0 55px #49FF18, 0 0 75px #49ff18;
+}
+header h1{
+  font-family: 'Kanit', sans-serif;
+  font-size: 6em;
+  line-height: 0.7;
+  letter-spacing: -3px;
+  text-transform: uppercase;
+  padding:0;
+  margin: 0;
+  color: white;
+  background: linear-gradient(to bottom, #0075d6 20%,#85b3bf 52%,#424242 54%,#424242 54%,#3d2c09 62%,#914f25 67%,#d337d1 79%,#d337d1 79%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+header h2{
+  position: relative;
+  left:280px;
+  top:-60px;
+  font-family: 'Damion', cursive;
+  margin: 0;
+  color: pink;
+  transform: perspective(400px) rotateY(40deg) rotate(-8deg);
+  text-shadow: 0 0 5px red, 0 0 10px red, 0 0 20px red, 0 0 30px red, 0 0 40px red, 0 0 55px red, 0 0 75px red;
+}
+
+main{
+  background-color: rgba(0,0,0,0.3);
+  box-shadow:  -5px  -5px  100px white, 5px  5px  100px white ;
 }
 
 div.grid {
-  width: 630px;
+  width: 540px;
   display: flex;
   flex-wrap: wrap;
-  color: lightgrey;
-}
-
-div.grid-item.pill:after{
-  content: '';
-  position: relative;
-  top:50%;
-  left: 50%;
-  display: block;
-  width: 4px;
-  height: 4px;
-  background-color: green;
 }
 
 div.grid-item {
-  width: 35px;
-  height: 35px;
-  border: 1px solid #111111;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.grid-item.pill i{
+  font-size: 0.5em;
+  color: white;
+  position: absolute;
+  z-index: 1;
 }
 
 div.grid-item.wall{
-  border-radius: 5px;
+  border-radius: 0px;
+  border: 2px solid blue;
+  background-color: black;
+}
+div.grid-item.wall:before{
+  content: '';
+  width:100%;
+  height:100%;
+  box-shadow:  3px  3px  15px #a700c7,  -3px  3px 15px blue,  -3px -3px 15px red;
 }
 
-div.grid-item.wall {
-  background-color: #a700c7;
-  color: #a700c7;
-}
 div.grid-item.prison {
-  background-color: #444444;
-  color: #666666;
+  background-color: rgba(50,50,50,0.7);
+  border:0;
 }
-div.grid-item.pinky {
+div.grid-item.prison:before {
+  box-shadow: none;
+}
+div.grid-item.pinky:before {
   background-image: url('../assets/pinky.gif');
   background-repeat: no-repeat;
   background-size: contain;
+  display: block;
+  content: '';
+  position: relative;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
 }
-div.grid-item.binky {
+div.grid-item.binky:before {
   background-image: url('../assets/blinky.gif');
   background-repeat: no-repeat;
   background-size: contain;
+  display: block;
+  content: '';
+  position: relative;
+  width: 30px;
+  height: 30px;
+  z-index: 2;
 }
 div.grid-item.binky.hidden, div.grid-item.pinky.hidden {
   /* background-image: none; */
 }
 
-
-
-div.grid-item.pacman {
-  background-color: #ffd915;
+div.grid-item.pacman:after {
+  display: block;
+  content: '';
+  position: relative;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
+  background-color: #ffd915;
   clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);
+  z-index: 2;
 }
-div.grid-item.pacman.right {
+div.grid-item.pacman.right:after {
   transform: rotate(0deg);
   animation: 0.3s linear slideRight;
 }
-div.grid-item.pacman.down {
+div.grid-item.pacman.down:after {
   transform: rotate(90deg);
   animation: 0.3s linear slideDown;
 }
-div.grid-item.pacman.left {
+div.grid-item.pacman.left:after {
   transform: rotate(180deg);
   animation: 0.3s linear slideLeft;
 }
-div.grid-item.pacman.up {
+div.grid-item.pacman.up:after {
   transform: rotate(270deg);
   animation: 0.3s linear slideUp;
 }
-div.grid-item.pacman.dead {
+div.grid-item.pacman.dead:after {
   animation: 1s linear dead;
   background-color: inherit;
   transition: background-color 1s step-end;
