--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,10 @@ div.grid-item.pill i{
   position: absolute;
   z-index: 1;
 }
+div.grid-item.pill.eaten i{
+  opacity: 0;
+  transition: all 0.3s step-end;
+}
 
 div.grid-item.wall{
   border-radius: 0px;
@@ -130,6 +134,19 @@ div.grid-item.binky:before {
   height: 30px;
   z-index: 2;
 }
+div.grid-item.binky.up:before {
+  animation: 0.6s linear ghostSlideUp;
+}
+div.grid-item.binky.down:before {
+  animation: 0.6s linear ghostSlideDown;
+}
+div.grid-item.binky.left:before {
+  animation: 0.6s linear ghostSlideLeft;
+}
+div.grid-item.binky.right:before {
+  animation: 0.6s linear ghostSlideRight;
+}
+
 div.grid-item.binky.hidden, div.grid-item.pinky.hidden {
   /* background-image: none; */
 }
@@ -201,4 +218,21 @@ div.grid-item.pacman.dead:after {
   33%{  clip-path: polygon(100% 0, 50% 50%, 100% 100%, 0 100%, 0 0);}
   66%{  clip-path: polygon(0 0, 50% 50%, 0 100%, 0 100%, 0 0);}
   100%{ clip-path: polygon(0 50%, 50% 50%, 0 50%, 0 50%, 0 50%);}
+}
+
+@keyframes ghostSlideRight {
+  0% {  transform: translateX(-34px);}
+  100%{ transform: translateX(0);}
+}
+@keyframes ghostSlideDown {
+  0% {  transform: translateY(-34px);}
+  100%{ transform: translateY(0);}
+}
+@keyframes ghostSlideLeft {
+  0% {  transform: translateX(+34px);}
+  100%{ transform: translateX(0);}
+}
+@keyframes ghostSlideUp {
+  0% {  transform: translateY(34px);}
+  100%{ transform: translateY(0);}
 }
