--- a/styles/style.css
+++ b/styles/style.css
@@ -112,8 +112,8 @@ div.grid-item.prison {
 div.grid-item.prison:before {
   box-shadow: none;
 }
-div.grid-item.pinky:before {
-  background-image: url('../assets/pinky.gif');
+
+div.grid-item.binky:before, div.grid-item.pinky:before {
   background-repeat: no-repeat;
   background-size: contain;
   display: block;
@@ -122,34 +122,26 @@ div.grid-item.pinky:before {
   width: 30px;
   height: 30px;
   z-index: 2;
+}
+div.grid-item.pinky:before {
+  background-image: url('../assets/pinky.gif');
 }
 div.grid-item.binky:before {
   background-image: url('../assets/blinky.gif');
-  background-repeat: no-repeat;
-  background-size: contain;
-  display: block;
-  content: '';
-  position: relative;
-  width: 30px;
-  height: 30px;
-  z-index: 2;
 }
-div.grid-item.binky.up:before {
-  animation: 0.6s linear ghostSlideUp;
+.binky-up:before, .pinky-up:before {
+  animation: 0.7s linear ghostSlideUp;
 }
-div.grid-item.binky.down:before {
-  animation: 0.6s linear ghostSlideDown;
+.binky-down:before, .pinky-down:before {
+  animation: 0.7s linear ghostSlideDown;
 }
-div.grid-item.binky.left:before {
-  animation: 0.6s linear ghostSlideLeft;
+.binky-left:before, .pinky-left:before {
+  animation: 0.7s linear ghostSlideLeft;
 }
-div.grid-item.binky.right:before {
-  animation: 0.6s linear ghostSlideRight;
+.binky-right:before, .pinky-right:before {
+  animation: 0.7s linear ghostSlideRight;
 }
 
-div.grid-item.binky.hidden, div.grid-item.pinky.hidden {
-  /* background-image: none; */
-}
 
 div.grid-item.pacman:after {
   display: block;
@@ -162,19 +154,19 @@ div.grid-item.pacman:after {
   clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);
   z-index: 2;
 }
-div.grid-item.pacman.right:after {
+div.grid-item.pacman-right:after {
   transform: rotate(0deg);
   animation: 0.3s linear slideRight;
 }
-div.grid-item.pacman.down:after {
+div.grid-item.pacman-down:after {
   transform: rotate(90deg);
   animation: 0.3s linear slideDown;
 }
-div.grid-item.pacman.left:after {
+div.grid-item.pacman-left:after {
   transform: rotate(180deg);
   animation: 0.3s linear slideLeft;
 }
-div.grid-item.pacman.up:after {
+div.grid-item.pacman-up:after {
   transform: rotate(270deg);
   animation: 0.3s linear slideUp;
 }
