--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body {
   background-color: black;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 10px auto;
   opacity: 0;
   background-image: url('../assets/bg2reduced.jpeg');
 }
@@ -30,7 +30,8 @@ body.ready{
 header{
   width:540px;
   height: 165px;
-  overflow: hidden;
+  overflow-x: hidden;
+  position: relative;
 }
 header p{
   position: relative;
@@ -52,7 +53,7 @@ header h1{
   padding:0;
   margin: 0;
   color: white;
-  background: linear-gradient(to bottom, #0075d6 20%,#85b3bf 52%,#424242 54%,#424242 54%,#3d2c09 62%,#914f25 67%,#d337d1 79%,#d337d1 79%);
+  background: linear-gradient(to bottom, #0075d6 20%,#85b3bf 52%,#424242 54%,#424242 54%,#3d2c09 62%,#914f25 67%,#d337d1 79%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -60,12 +61,25 @@ header h1{
 header h2{
   position: relative;
   left:280px;
-  top:-60px;
+  top:-70px;
   font-family: 'Damion', cursive;
   margin: 0;
   color: pink;
-  transform: perspective(400px) rotateY(40deg) rotate(-8deg);
+  transform: perspective(350px) rotateY(40deg) rotate(-8deg);
   text-shadow: 0 0 5px red, 0 0 10px red, 0 0 20px red, 0 0 30px red, 0 0 40px red, 0 0 55px red, 0 0 75px red;
+}
+
+header .pacman-title{
+  position: absolute;
+  z-index: -1;
+  top: 0px;
+  left: 20px;
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  background-color: #ffd915;
+  clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);
+  animation: 8s linear titleMunch infinite;
 }
 
 main{
@@ -76,7 +90,6 @@ main{
 
 article.grid .message-overlay{
   position: absolute;
-  font-size: 10em;
   line-height: 0.8;
   letter-spacing: -3px;
   text-align: center;
@@ -88,32 +101,37 @@ article.grid .message-overlay{
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px blue, 0 0 30px purple;
+  text-shadow: 0 0 5px #ddd, 0 0 10px #ddd, 0 0 20px blue, 0 0 30px purple;
 }
 article.grid .message-overlay .message{
   position: relative;
   z-index: 3;
   animation: 1s linear messageZoom;
+  font-size: 10em;
+}
+article.grid .message-overlay .message.small{
+  font-size: 1.3em;
+  letter-spacing: 3px;
 }
 
 article.grid {
   position: relative;
-  background-color: rgba(0,0,0,0.3);
-  box-shadow: -5px -5px 100px white, 5px 5px 100px white ;
+  background-color: rgba(0,0,0,0.5);
+  box-shadow: -5px -5px 10px white, 5px 5px 100px white ;
   width: 510px;
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 60px;
 }
 article.scoreboard {
   background-color: rgba(0,0,0,0.8);
   box-shadow: -5px -5px 100px white, 5px 5px 100px white ;
-  margin-top: 30px;
-  height: 70px;
+  height: 60px;
   width: 450px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 article.scoreboard .score{
@@ -141,13 +159,18 @@ div.grid-item {
   justify-content: center;
 }
 
-div.grid-item.pill i{
+div.grid-item.pill i, div.grid-item.big-pill i{
   font-size: 0.5em;
   color: white;
   position: absolute;
   z-index: 1;
 }
-div.grid-item.pill.eaten i{
+div.grid-item.big-pill i{
+  font-size: 1.3em;
+  color: #00c7a7;
+}
+
+div.grid-item.pill.eaten i, div.grid-item.big-pill.eaten i {
   opacity: 0;
   transition: all 0.3s step-end;
 }
@@ -161,7 +184,7 @@ div.grid-item.wall:before{
   content: '';
   width:100%;
   height:100%;
-  box-shadow:  3px  3px  15px #a700c7,  -3px  3px 15px blue,  -3px -3px 15px red;
+  box-shadow: 3px 3px 15px #a700c7, -3px 3px 15px blue, -3px -3px 15px red;
 }
 
 div.grid-item.prison {
@@ -194,88 +217,124 @@ div.grid-item.stinky:before {
 div.grid-item.clyde:before {
   background-image: url('../assets/clyde.gif');
 }
-.binky-up:before, .pinky-up:before, .stinky-up:before, .clyde-up:before {
-  animation: 0.7s linear ghostSlideUp;
+div.grid-item.pinky.pinky-pilled:before,
+div.grid-item.binky.binky-pilled:before,
+div.grid-item.stinky.stinky-pilled:before,
+div.grid-item.clyde.clyde-pilled:before {
+  background-image: url('../assets/ghost-pilled.gif');
 }
-.binky-down:before, .pinky-down:before, .stinky-down:before, .clyde-down:before {
-  animation: 0.7s linear ghostSlideDown;
+div.grid-item.pinky.pinky-pilled-ending:before,
+div.grid-item.binky.binky-pilled-ending:before,
+div.grid-item.stinky.stinky-pilled-ending:before,
+div.grid-item.clyde.clyde-pilled-ending:before {
+  background-image: url('../assets/ghost-pilled-ending.gif');
 }
-.binky-left:before, .pinky-left:before, .stinky-left:before, .clyde-left:before {
-  animation: 0.7s linear ghostSlideLeft;
-}
-.binky-right:before, .pinky-right:before, .stinky-right:before, .clyde-right:before {
-  animation: 0.7s linear ghostSlideRight;
+/* Makes sure we dont have a sprite overlap issue */
+div.grid-item.pacman.pinky.pinky-pilled:before,
+div.grid-item.pacman.binky.binky-pilled:before,
+div.grid-item.pacman.stinky.stinky-pilled:before,
+div.grid-item.pacman.clyde.clyde-pilled:before,
+div.grid-item.pacman.pinky.pinky-pilled-ending:before,
+div.grid-item.pacman.binky.binky-pilled-ending:before,
+div.grid-item.pacman.stinky.stinky-pilled-ending:before,
+div.grid-item.pacman.clyde.clyde-pilled-ending:before {
+  display: none;
 }
 
-.pacman:after {
+.binky-up:before, .pinky-up:before, .stinky-up:before, .clyde-up:before {
+  animation: 0.5s linear ghostSlideUp;
+}
+.binky-down:before, .pinky-down:before, .stinky-down:before, .clyde-down:before {
+  animation: 0.5s linear ghostSlideDown;
+}
+.binky-left:before, .pinky-left:before, .stinky-left:before, .clyde-left:before {
+  animation: 0.5s linear ghostSlideLeft;
+}
+.binky-right:before, .pinky-right:before, .stinky-right:before, .clyde-right:before {
+  animation: 0.5s linear ghostSlideRight;
+}
+
+.pacman:after{
   content: '';
   position: relative;
   width: 25px;
   height: 25px;
   border-radius: 50%;
   background-color: #ffd915;
-  clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);
+  clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);
   z-index: 2;
 }
+
+
 div.grid-item.pacman-right:after {
   transform: rotate(0deg);
-  animation: 0.3s linear slideRight;
+  animation: 0.5s linear slideRight;
 }
 div.grid-item.pacman-down:after {
   transform: rotate(90deg);
-  animation: 0.3s linear slideDown;
+  animation: 0.5s linear slideDown;
 }
 div.grid-item.pacman-left:after {
   transform: rotate(180deg);
-  animation: 0.3s linear slideLeft;
+  animation: 0.5s linear slideLeft;
 }
 div.grid-item.pacman-up:after {
   transform: rotate(270deg);
-  animation: 0.3s linear slideUp;
+  animation: 0.5s linear slideUp;
 }
 div.grid-item.pacman.dead:after {
-  animation: 1s linear dead;
-  background-color: inherit;
-  transition: background-color 1s step-end;
+  animation: 2s linear dead;
+  background-color: rgba(255, 217, 21, 0);
+  /* transition: background-color 1s step-end; */
 }
+
 
 @keyframes messageZoom {
   0% {  transform: scale(0.01) rotate(0deg);}
   100%{ transform: scale(1) rotate(0deg);}
 }
+@keyframes titleMunch {
+  40% {  clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+  50%{  clip-path: polygon(100% 50%, 50% 50%, 100% 50%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+  60%{ clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+}
 @keyframes slideRight {
   0% {  transform: translateX(-34px) rotate(0deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   50%{  clip-path: polygon(100% 50%, 50% 50%, 100% 50%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   100%{ transform: translateX(0) rotate(0deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
 }
 @keyframes slideDown {
   0% {  transform: translateY(-34px) rotate(90deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   50%{  clip-path: polygon(100% 50%, 50% 50%, 100% 50%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   100%{ transform: translateY(0) rotate(90deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
 }
 @keyframes slideLeft {
   0% {  transform: translateX(+34px) rotate(180deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   50%{  clip-path: polygon(100% 50%, 50% 50%, 100% 50%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   100%{ transform: translateX(0) rotate(180deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
 }
 @keyframes slideUp {
   0% {  transform: translateY(34px) rotate(270deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   50%{  clip-path: polygon(100% 50%, 50% 50%, 100% 50%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
   100%{ transform: translateY(0) rotate(270deg);
-        clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
 }
 @keyframes dead {
-  0% {  clip-path: polygon(100% 33%, 50% 50%, 100% 66%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
-  33%{  clip-path: polygon(100% 0, 50% 50%, 100% 100%, 0 100%, 0 0);}
-  66%{  clip-path: polygon(0 0, 50% 50%, 0 100%, 0 100%, 0 0);}
-  100%{ clip-path: polygon(0 50%, 50% 50%, 0 50%, 0 50%, 0 50%);}
+  0% {  background-color: rgba(255, 217, 21, 1);
+        clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+  10%{  clip-path: polygon(100% 15%, 50% 50%, 100% 85%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+  25%{  clip-path: polygon(75% 0, 50% 50%, 75% 100%, 100% 100%, 0% 100%, 0% 0%, 100% 0%);}
+  75%{  background-color: rgba(255, 217, 21, 1);
+        clip-path: polygon(10% 0, 50% 50%, 10% 100%, 0 100%, 0 100%, 0 0, 0 0);}
+  100%{ background-color: rgba(255, 217, 21, 0);
+        clip-path: polygon(0 50%, 50% 50%, 0 50%, 0 100%, 0 100%, 0 0, 0 0);}
 }
 
 @keyframes ghostSlideRight {
