--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ article.grid {
   max-width: 510px;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 article.scoreboard {
   background-color: rgba(0,0,0,0.8);
@@ -294,6 +294,24 @@ div.grid-item.pacman.dead:after {
   /* transition: background-color 1s step-end; */
 }
 
+article.d-pad{
+  background-image: url('../assets/dpad.png');
+  background-color: rgba(255,255,255,0.7);
+  border-radius: 40%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+article.d-pad div.d-pad-row{
+  display: flex;
+  justify-content: center;
+}
+
+div.d-pad-row div{
+  width: 50px;
+  height: 50px;
+}
 
 @keyframes messageZoom {
   0% {  transform: scale(0.01) rotate(0deg);}
